--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -19,10 +19,10 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   -->
-  <!-- <script src="https://webgazer.cs.brown.edu/webgazer.js?" defer></script>
+  <script src="https://webgazer.cs.brown.edu/webgazer.js?" defer></script>
   <script src="../src/assets/js/face-api.min.js"></script>
   <script src="src/assets/js/index.js" defer></script>
-  <script src="../src/assets/js/faceRecognition.js" defer></script> -->
+  <script src="../src/assets/js/faceRecognition.js" defer></script>
 
 </head>
 <body>
